# thcovmat

./: .gitignore  masks.py  prescriptions.py  pyproject.toml  thcovmat.py
src/thcovmat/: __main__.py  debug.py  prescriptions.py  thcovmat.py
src/thcovmat/debug/: __init__.py  out.py
