[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "thcovmat"
version = "0.1.0"
description = "Tools for theory covariance matrices"
authors = ["Alessandro Candido <candido.ale@gmail.com>"]
packages = [{ include = "thcovmat", from = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.21.0"
rich = "^12.0.0"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
debug = "thcovmat.debug:cli"

[tool.poe.tasks]
